<!--
SPDX-FileCopyrightText: © 2025 Sysand contributors <opensource@sensmetry.com>

SPDX-License-Identifier: MIT OR Apache-2.0
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.sysand</groupId>
  <artifactId>sysandTests</artifactId>
  <version>0.1.0</version>
  <description>Java Sysand Tests</description>
  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <profiles>
    <!-- maven.compiler.release is only available in Java 9+, but it is required
    to disallow usage of Java >8 APIs when building with Java >8 -->
    <profile>
      <id>java-8-api</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <maven.compiler.release>8</maven.compiler.release>
      </properties>
    </profile>
  </profiles>
  <repositories>
    <repository>
      <!-- local repository (autoupdated) -->
      <id>local-maven-repo</id>
      <url>file:///${project.basedir}/local-maven-repo</url>
    </repository>
  </repositories>
  <dependencies>

    <!-- local-maven-repo -->
    <dependency>
      <groupId>org.sysand</groupId>
      <artifactId>sysand</artifactId>
      <version>SYSAND_VERSION</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>6.0.0</version>
      <scope>test</scope>
    </dependency>

    <!-- logger  -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>2.0.17</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-reload4j</artifactId>
      <version>2.0.17</version>
    </dependency>
    <!-- logger  -->

  </dependencies>
  <build>
    <plugins>
      <plugin>
        <!-- test runner -->
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.4</version>
        <configuration>
          <argLine>--enable-native-access=ALL-UNNAMED</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
